      true value: this is done by \command{R CMD check --as-cran}.

      \item \command{R CMD check} now reports more warnings on
      long-deprecated/obsolete Fortran features from
      \command{gfortran -Wall}.  For hints on how to modernize these,
      see
      \url{https://fortranwiki.org/fortran/show/Modernizing+Old+Fortran}.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item Auto-generated \code{citation()} entries no longer include
      (additional) URLs in the \samp{note} field (\PR{18547}).

      \item \code{as.data.frame.list()} gets a new option \code{new.names}
      and now preserves \code{NA} names, thus fixing the \code{format()}
      method for data frames, and also bug \PR{18745}.
      \I{Relatedly}, the \code{format()} method gets an option \code{cut.names}.

      \item \code{stem()} formats correctly also in cases where rounding
      up, e.g., from 9.96 to 10 needs more digits; thanks to \I{Ella
      Kaye} and \I{Kelly Bodwin}, fixing \PR{8934} during \sQuote{\I{R
      Dev Day}} at \I{useR!2024}.

      Additionally, \code{stem(x)} now works normally also when
      \code{length(x) == 1}.

      \item \pkg{tools}' \code{toTitleCase()} now works better, fixing
      \PR{18674}, thanks to \I{Shannon Pileggi}, \I{Sarah Zeller},
      \I{Reiko Okamoto}, and \I{Hugo Gruson}'s \sQuote{\I{R Dev Day}}
      effort.

      \item Printing matrices (typically with many rows and or columns)
      now also omits columns when desirable according to option
      \code{max.print}, or argument \code{max}, respectively.
      This is primarily the work of \I{Lorena Abad},
      \I{Ekaterina Akimova}, \I{Hanne Oberman}, \I{Abhishek Ulayil},
      and \I{Lionel Henry} at the \sQuote{\I{R Dev Day}}, thus fixing
      \PR{15027}.

      \item \code{Sys.setLanguage()} now works in an \command{LC_ALL=C R} session
      on some platforms, warns about \emph{some} failures to change the