@@ -267,6 +267,12 @@
       \command{gfortran -Wall}.  For hints on how to modernize these,
       see
       \url{https://fortranwiki.org/fortran/show/Modernizing+Old+Fortran}.
+
+      \item Since all supported \R versions now use UTF-8, \command{R CMD
+	check} no longer by default reports on marked strings in
+      character data.  Set environment variable
+      \env{_R_CHECK_PACKAGE_DATASETS_SUPPRESS_NOTES_}
+      to a false value for the previous behaviour.
     }
   }
 
